Cookies/Overflow fix

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,5 +6,6 @@
   min-width: 100vw;
   min-height: 100vh;
   background-color: rgb(0, 0, 0);
+  overflow: hidden;
 }
 
